errors_utf8.txt
cargo :     Checking webdisp
lay v0.1.0 (C:\Users\Misaka\
Code\webdisplay)
所在位置 行:1 字符: 1
+ cargo check 2>&1 | Out-Fil
e -Encoding utf8 errors_utf8
.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (    C  
  hecking we...ode\webdis   
 play):String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
error[E0609]: no field `key_
pair` on type `rcgen::Certif
iedKey<KeyPair>`
  --> src\server\tls.rs:36:2
9
   |
36 |     key_file.write_all(
cert.key_pair.serialize_pem(
).as_bytes())?;
   |                        
     ^^^^^^^^ unknown field
   |
   = note: available fields 
are: `cert`, `signing_key`

For more information about t
his error, try `rustc --expl
ain E0609`.
error: could not compile `we
bdisplay` (bin "webdisplay")
 due to 1 previous error
